[package]
name = "battito-app"
version = "0.1.0"
authors = ["Giuseppe Lillo <giuseppe.lillo8@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
battito-lib = { path = "../battito-lib" }
nannou_osc = "0.15.0"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
rustyline = "8.0.0"
rustyline-derive = "0.4.0"