[package]
name = "battito-lib"
version = "0.1.0"
authors = ["Giuseppe Lillo <giuseppe.lillo8@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gcd = "2.0.1"
nom = "6.1.2"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"