[package]
name = "battito-max"
version = "0.1.0"
authors = ["Giuseppe Lillo <giuseppe.lillo8@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
battito-lib = { path = "../battito-lib" }
libc = "0.2.0"

[lib]
name = "battito_max"
crate-type = ["staticlib", "cdylib"]